Set default stack size.

--- a/lib/SPVM/Go/Coroutine.config
+++ b/lib/SPVM/Go/Coroutine.config
@@ -62,21 +62,6 @@ sub get_coro_define {
      $iface = "p";
    
      if (!$pthread) {
-        # uh-oh
-        print <<EOF;
-   
-  ***
-  *** WARNING: Your platform is known to have broken pthreads, which are
-  *** required for Coro because your platform is known to have broken
-  *** ucontext and setjmp/longjmp functions as well, which are broken
-  *** because your pthread library is broken. D'oh.
-  ***
-  *** Coro will try to fight this vicious circle of breakage, but YMMV. If
-  *** Coro fails, try to recompile your perl with -lpthread, which will work
-  *** around some of the pthread bugs. (You do not have to enable ithreads).
-  ***
-   
-EOF
         # ugh, pthreads need to be linked into the main program :/
         $iface = $iface_asm || "s";
      }
@@ -146,6 +131,10 @@ EOF
      goto retry;
   }
   
+  my $stacksize = $^O eq "linux" && $] < 5.008008 ? 128 * 1024 : 16384;
+  
+  $DEFINE .= " -DCORO_STACKSIZE=$stacksize";
+  
   return $DEFINE;
 }
 
@@ -153,12 +142,12 @@ my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);
 
 my $coro_define = &get_coro_define();
 
-warn $coro_define;
-
 # TODO: why do heading spaces have an compile error?
 $coro_define =~ s/^ //;
 
-$config->add_ccflag($coro_define);
+my @coro_define = split(/\s+/, $coro_define);
+
+$config->add_ccflag(@coro_define);
 
 my @source_files = qw(
   coro.c
