Remove coro_define.

--- a/lib/SPVM/Go/Coroutine.config
+++ b/lib/SPVM/Go/Coroutine.config
@@ -145,7 +145,7 @@ $coro_define =~ s/^ //;
 
 my @coro_define = split(/\s+/, $coro_define);
 
-$config->add_ccflag(@coro_define);
+# $config->add_ccflag(@coro_define);
 
 my @source_files = qw(
   coro.c
