Windows try to ASM.

--- a/lib/SPVM/Go/Coroutine.config
+++ b/lib/SPVM/Go/Coroutine.config
@@ -16,7 +16,7 @@ sub get_coro_define {
   my $LIBS = [];
   
   # default to assembly on x86 and x86_64 sometimes
-  my $iface_asm = $Config{archname} =~ /^(i[3456]86|amd64|x86_64)-/ ? "a" : undef;
+  my $iface_asm = $Config{archname} =~ /^(i[3456]86|amd64|x86_64|MSWin32-x64)-/ ? "a" : undef;
    
   # detect whether this perl is threaded, for those broken operating
   # systems that need it.
